--- a/library_app/livre/templates/base.html
+++ b/library_app/livre/templates/base.html
@@ -89,7 +89,7 @@
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="{% url 'dashboard' %}" class="nav-link px-2 text-muted">About</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
       </ul>
       <p class="text-center text-muted">© 2024 HB bibliotheque</p>
     </footer>
